css/styles.css
:root {
  /* Primary Colors */
  --color-blue-400: hsl(221, 82%, 62%);

  /* Neutral Colors */
  --color-neutral-100: hsl(0, 00%, 100%);
  --color-neutral-200: hsl(210, 40%, 98%);
  --color-neutral-400: hsl(217, 10%, 84%);
  --color-neutral-800: hsl(231, 76%, 5%);

  /* Font Family */
  --ff-base: 'Inter', sans-serif;

  /* Font Size */
  --fs-36: 2.25rem;
  --fs-24: 1.5rem;
  --fs-16: 1rem;

  /* Default Font Size */
  --fs-base: 1rem;
  /* Font Weights */
  --fw-900: 900;
  --fw-800: 800;
  --fw-700: 700;
  --fw-600: 600;
  --fw-500: 500;
  --fw-400: 400;
  --fw-300: 300;
  --fw-200: 200;
  --fw-100: 100;

  /* Spacing */
  --spacing-1: 0.25rem;
  --spacing-24: 1.5rem;

  --spacing-48: 4rem;
  --spacing-80: 5rem;
}

/********* Reset **********/
/* Stop any animation if the user has set their device to "prefers reduced motion". */
@media (prefers-reduced-motion: reduce) {
  * {
    animation: none !important;
    transition: none !important;
    animation-duration: 0.1s !important;
    transition-duration: 0.1s !important;

    scroll-behavior: smooth;
  }
}

/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
/*
  2. Remove default margin
*/
* {
  margin: 0;
}
/*
  3. Allow percentage-based heights in the application
*/
html,
body {
  height: 100%;
}
/*
  Typographic tweaks!
  4. Add accessible line-height
  5. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
  6. Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
  7. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
  font: inherit;
}
/*
  8. Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}
/*
  9. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

body {
  color: var(--color-neutral-800);
  font-family: var(--ff-base);
  font-size: var(--fs-base);
  line-height: 1.6;
}

.visually-hidden {
  border: 0 !important;
  clip: rect(1px, 1px, 1px, 1px) !important;
  -webkit-clip-path: inset(50%) !important;
  clip-path: inset(50%) !important;
  height: 1px !important;
  margin: -1px !important;
  overflow: hidden !important;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
  white-space: nowrap !important;
}

.wrapper {
  max-width: 600px;
  margin: 0 auto;
}

h1 {
  font-size: var(--fs-36);
  font-weight: 600;
}

h2 {
  font-size: var(--fs-24);
  font-weight: 600;
}

a {
  color: var(--color-blue-400);
  text-decoration: none;
}

ul,
ol {
  padding-left: 1.25rem;
}

li:not(:last-child) {
  margin-bottom: 0.5rem;
}

/***** Header Styles *****/
.header {
  background-color: var(--color-neutral-100);
  padding: var(--spacing-80) 0;
  text-align: center;
}

/***** FAQS Styles *****/
.faqs {
  background-color: var(--color-neutral-200);
  padding-block: var(--spacing-80);
}

.faq {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.rule {
  border-top: 1px solid var(--color-neutral-400);
  margin-block: 2rem;
}

.faq span {
  font-weight: 700;
}

/***** Author Styles *****/
.author-info {
  font-size: 14px;
  text-align: center;
  margin-top: 16px;
  color: rgb(55, 65, 81);
}

.author-info a {
  text-decoration: none;
}

